<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reversi</string>
	<string name="start_new">Start a New Game</string>
	<string name="swap_players">Swap Players</string>
	<string name="difficulty">Difficulty</string>
	<string name="ai_simple">Beginner</string>
	<string name="ai_easy">Easy</string>
	<string name="ai_moderate">Moderate</string>
	<string name="ai_hard">Hard</string>
	<string name="ai_very_hard">Very Hard</string>
	<string name="key_board">key_board</string>
	<string name="key_ai">key_ai</string>
	<string name="key_player">key_player</string>
	<string name="show_legal">Show Legal Moves</string>
	<string name="hide_legal">Hide Legal Moves</string>
	<string name="change_pieces">Change Pieces</string>
	<string name="cp_basic">Wooden</string>
	<string name="cp_plain">Basic</string>
	<string name="cp_hearts">Hearts</string>
	<string name="cp_tudor">Tudor</string>
	<string name="cp_wwii">Axis and Allies</string>
	<string name="cp_shield">Shields</string>
	<string name="change_board">Change Board</string>
	<string name="cb_basic">Green Felt</string>
	<string name="cb_red">Lilac Felt</string>
	<string name="cb_marble">Marble</string>
	<string name="b_new_game">New Game</string>
	<string name="b_undo">Undo Move</string>
	<string name="b_quit">Exit</string>
	<string name="b_help">Help</string>
	<string name="b_ok">OK</string>
	<string name="b_close">Close</string>
	<string name="b_cancel">Cancel</string>
	<string name="d_difficulty_title">Choose Difficulty</string>
	<string name="d_new_title">Start a New Game</string>
	<string name="d_swap_title">Swap Player</string>
	<string name="d_help_title">Reversi Help</string>
	<string name="d_quit_title">Exit Reversi</string>
	<string name="d_new_question">Are you sure you want to quit the current game and start a new one?</string>
	<string name="d_swap_question">Swapping players will start a new game. Are you sure you want to start a new game?</string>
	<string name="d_quit_question">Are you sure you want to exit?</string>
	<string name="d_yes">Yes</string>
	<string name="d_no">No</string>
	<string name="d_ok">OK</string>
	<string name="your_move">Your Move!</string>
	<string name="computers_move">Computer\'s  Move!</string>
	<string name="current_score">Current score: %s</string>
	<string name="final_score">Final score: %s</string>
	<string name="game_over">Game over!</string>
	<string name="last_move">Last move: %s</string>
	<string name="you_win">You win</string>
	<string name="you_lose">You lose</string>
	<string name="draw">It\'s a draw</string>
    <string name="dont_allow">Don\'t allow the user access</string>
    <string name="allow">Allow the user access</string>
    <string name="application_error">Application error: %1$s</string>
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="buy_button">Buy app</string>
    <string name="quit_button">Exit</string>
</resources>
